--- a/wrapper.vcxproj
+++ b/wrapper.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="message.cpp" />
     <ClCompile Include="utility.cpp" />
+    <ClCompile Include="window_class.cpp" />
     <ClCompile Include="winmain.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -164,6 +165,7 @@
     <ClInclude Include="resource.hpp" />
     <ClInclude Include="resource_ptr.hpp" />
     <ClInclude Include="utility.hpp" />
+    <ClInclude Include="window_class.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
