--- a/wrapper.vcxproj
+++ b/wrapper.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="message.cpp" />
     <ClCompile Include="utility.cpp" />
+    <ClCompile Include="window.cpp" />
     <ClCompile Include="window_class.cpp" />
     <ClCompile Include="winmain.cpp" />
   </ItemGroup>
@@ -165,6 +166,7 @@
     <ClInclude Include="resource.hpp" />
     <ClInclude Include="resource_ptr.hpp" />
     <ClInclude Include="utility.hpp" />
+    <ClInclude Include="window.hpp" />
     <ClInclude Include="window_class.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
